--- a/tata-cliq/src/components/Home.css
+++ b/tata-cliq/src/components/Home.css
@@ -1,6 +1,140 @@
 
 #hscreen {
     width: 100%;
-    height: 300px;
+    height: 2800px;
     /* border: 1px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:rgb(236,236,236) ;
+}
+.slide-container {
+    width: 100%;
+    height: 200px;
+    /* border: 1px solid red; */
+}
+.slide >img {
+    width: 100%;
+    height: 200px;
+}
+.slider >img {
+    width: 100%;
+    height: 200px;
+}
+.main-img1 {
+    width: 100%;
+    height: 100px;
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10px;
+}
+.main-img1 >img {
+    width: 9.8%;
+    height: 80px;
+}
+.main-img2 {
+    width: 80%;
+    height: 50px;
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10px;
+    background-color: rgb(236,236,236);
+    
+}
+.main-img2 >img {
+    width: 32.5%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1.5px solid #fff;
+    box-shadow: 2px 2px 10px 2px rgb(222, 221, 221);
+}
+.main-img3 {
+    width: 80%;
+    height: 70px;
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 45px 0px;
+}
+.main-img3 >img {
+    width: 100%;
+    height: 70px;
+}
+.main-img4 {
+    width: 75%;
+    height: 200px;
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10px;
+}
+.main-img4 >img {
+    width: 23.5%;
+    height: 200px;
+    transition: 1s;
+}
+.main-img4 >img:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+.main-img6 {
+    width: 75%;
+    height: 200px;
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10px;
+}
+.main-img6 >img {
+    width: 23.5%;
+    height: 200px;
+    transition: 1s;
+}
+.main-img6 >img:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+.main-img8 {
+    width: 75%;
+    height: 180px;
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 10px;
+}
+.main-img8 >img {
+    width: 23.5%;
+    height: 170px;
+    transition: 1s;
+}
+.main-img8 >img:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+.main-img12 {
+    width: 80%;
+    height: 700px;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-around;
+    box-sizing: border-box;
+    flex-wrap: wrap;
+}
+.main-img12 >img {
+    width: 49%;
+    height: 200px;
+    transition: 1s;
+    /* border: 1px solid yellow; */
+}
+.main-img12 >img:hover {
+    cursor: pointer;
+    transform: scale(1.03);
 }
