--- a/tata-cliq/src/components/Home.css
+++ b/tata-cliq/src/components/Home.css
@@ -10,12 +10,12 @@
 }
 .slide-container {
     width: 100%;
-    height: 200px;
+    height: 250px;
     /* border: 1px solid red; */
 }
 .slide >img {
     width: 100%;
-    height: 200px;
+    height: 250px;
 }
 .slider >img {
     width: 100%;
@@ -33,6 +33,7 @@
 .main-img1 >img {
     width: 9.8%;
     height: 80px;
+    cursor: pointer;
 }
 .main-img2 {
     width: 80%;
@@ -43,7 +44,7 @@
     align-items: center;
     margin-top: 10px;
     background-color: rgb(236,236,236);
-    
+    cursor: pointer;
 }
 .main-img2 >img {
     width: 32.5%;
