--- a/tata-cliq/src/components/MensSingle.css
+++ b/tata-cliq/src/components/MensSingle.css
@@ -2,7 +2,7 @@
 
 #smain {
     width: 99.5%;
-    height: 500px;
+    height: 800px;
     border: 1px solid red;
     display: flex;
     justify-content: center;
@@ -11,8 +11,8 @@
 }
 .single-main {
     width: 90%;
-    height: 500px;
-    /* border: 1px solid yellow; */
+    height: 800px;
+    border: 1px solid yellow;
     display: flex;
     justify-content: space-between;
 
@@ -49,6 +49,151 @@
 }
 .sin-right {
     width: 49%;
-    height: 500px;
+    height: 800px;
     border: 1px solid yellow;
+}
+.right-to {
+    width: 41%;
+    height: 15px;
+    /* border: 1px solid red; */
+    margin: 5px;
+    border-radius: 10px;
+    background-color: rgb(240, 239, 239);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.right-to >i {
+    font-size: 7px;
+    color: rgb(218,28,92);
+    
+}
+.right-to >span {
+    font-size: 7px;
+    color: gray;
+}
+.info {
+    width: 80%;
+    height: 90px;
+    /* border: 1px solid yellow; */
+    margin: 5px;
+}
+.info >h5 {
+    font-size: 10px;
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+.info >p {
+    font-size: 8px;
+    margin-top: 3px;
+    margin-bottom: 8px;
+    color: rgb(130, 129, 129);
+}
+.info >span {
+    font-size: 7.5px;
+    margin-top: -5px;
+    color: rgb(218,28,92);
+}
+.rating {
+    width: 90%;
+    height: 40px;
+    border-bottom: 1px solid rgb(224, 224, 224);
+    margin: 5px;
+}
+.rating >div {
+    width: 25px;
+    height: 12px;
+    /* border: 1px solid green; */
+    display: flex;
+    background-color: rgb(27, 182, 27);
+}
+.rating >div >p {
+    margin-left: 2px;
+    margin-top: 0px;
+    font-size: 8px;
+    color: #fff;
+    font-weight: bold;
+}
+.rating >div >i {
+    font-size: 6px;
+    margin: 2px;
+    color: white;
+}
+.rating >div >span {
+    font-size: 7.5px;
+    margin: 2px;
+}
+.color {
+    width: 90%;
+    height: 65px;
+    border-bottom: 1px solid rgb(219, 219, 219);
+    margin: 5px;
+}
+.color >h5 {
+    font-size: 8.5px;
+    color: rgb(37, 37, 37);
+    margin: 0px;
+}
+.color >h5 >span {
+    color: rgb(46, 45, 45);
+    font-weight: lighter;
+}
+.color-shirt {
+    width: 40%;
+    height: 45px;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.color-shirt >img {
+    width: 32.5%;
+    height: 35px;
+    border-radius: 8px;
+}
+.size {
+    width: 90%;
+    height: 90px;
+    border-bottom: 1px solid rgb(218, 218, 218);
+    margin: 5px;
+}
+.size-text {
+    width: 100%;
+    height: 20px;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.size-text >h5 {
+    color: rgb(23, 23, 23);
+    font-size: 8.5px;
+}
+.size-text >p {
+    font-size: 8px;
+    color: rgb(218,28,92);
+    font-weight: bold;
+}
+.size-select {
+    width: 50%;
+    height: 30px;
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.size-select >button {
+    width: 18%;
+    height: 20px;
+    font-size: 9px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid black;
+    color: rgb(71, 71, 71);
+    cursor: pointer;
+}
+.size >p {
+    width: 60%;
+    font-size: 8px;
+    color: rgb(68, 68, 68);
 }
