--- a/tata-cliq/src/components/MensSingle.css
+++ b/tata-cliq/src/components/MensSingle.css
@@ -197,3 +197,36 @@
     font-size: 8px;
     color: rgb(68, 68, 68);
 }
+.card {
+    width: 90%;
+    height: 200px;
+    border: 1px solid red;
+    margin: 5px;
+}
+.card >h5 {
+    font-size: 9px;
+    margin: 0px;
+}
+.card >p {
+    font-size: 9px;
+}
+.card-all {
+    width: 100%;
+    height: 50px;
+    border: 1px solid yellow;
+    display: flex;
+}
+.card-img >img {
+    width: 50%;
+    margin: 5px;
+}
+.card-info >h6 {
+    font-size: 7.5px;
+    color: rgb(36, 36, 36);
+    margin: 0px;
+    margin-top: 8px;
+}
+.card-info >p {
+    font-size: 9px;
+    color: black;
+}
