--- a/tata-cliq/src/components/MensSingle.css
+++ b/tata-cliq/src/components/MensSingle.css
@@ -3,7 +3,7 @@
 #smain {
     width: 99.5%;
     height: 800px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,31 +12,31 @@
 .single-main {
     width: 90%;
     height: 800px;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     display: flex;
     justify-content: space-between;
 
 }
 .sin-left {
     width: 48%;
-    height: 335px;
+    height: 405px;
     /* border: 1px solid yellow; */
 }
 .img-top {
     width: 100%;
-    height: 192px;
+    height: 252px;
     /* border: 1px solid green; */
     display: flex;
     justify-content: space-between;
 }
 .img-top >img {
     width: 49%;
-    height: 192px;
+    height: 252px;
     border-radius: 5px;
 }
 .img-bot {
     width: 100%;
-    height: 130px;
+    height: 140px;
     /* border: 1px solid green; */
     margin-top: 10px;
     display: flex;
@@ -44,17 +44,17 @@
 }
 .img-bot >img {
     width: 32%;
-    height: 130px;
+    height: 140px;
     border-radius: 5px;
 }
 .sin-right {
     width: 49%;
     height: 800px;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
 }
 .right-to {
-    width: 41%;
-    height: 15px;
+    width: 35%;
+    height: 20px;
     /* border: 1px solid red; */
     margin: 5px;
     border-radius: 10px;
@@ -64,33 +64,33 @@
     align-items: center;
 }
 .right-to >i {
-    font-size: 7px;
+    font-size: 9px;
     color: rgb(218,28,92);
     
 }
 .right-to >span {
-    font-size: 7px;
+    font-size: 8.5px;
     color: gray;
 }
 .info {
     width: 80%;
-    height: 90px;
+    height: 120px;
     /* border: 1px solid yellow; */
-    margin: 5px;
+    margin: 10px 5px;
 }
 .info >h5 {
-    font-size: 10px;
+    font-size: 15px;
     margin-top: 5px;
     margin-bottom: 0px;
 }
 .info >p {
-    font-size: 8px;
+    font-size: 10px;
     margin-top: 3px;
     margin-bottom: 8px;
     color: rgb(130, 129, 129);
 }
 .info >span {
-    font-size: 7.5px;
+    font-size: 9px;
     margin-top: -5px;
     color: rgb(218,28,92);
 }
@@ -101,36 +101,36 @@
     margin: 5px;
 }
 .rating >div {
-    width: 25px;
-    height: 12px;
+    width: 30px;
+    height: 15px;
     /* border: 1px solid green; */
     display: flex;
     background-color: rgb(27, 182, 27);
 }
 .rating >div >p {
     margin-left: 2px;
-    margin-top: 0px;
-    font-size: 8px;
+    margin-top: 2.5px;
+    font-size: 10px;
     color: #fff;
     font-weight: bold;
 }
 .rating >div >i {
-    font-size: 6px;
-    margin: 2px;
+    font-size: 8px;
+    margin: 3px;
     color: white;
 }
 .rating >div >span {
-    font-size: 7.5px;
+    font-size: 9px;
     margin: 2px;
 }
 .color {
     width: 90%;
-    height: 65px;
+    height: 85px;
     border-bottom: 1px solid rgb(219, 219, 219);
     margin: 5px;
 }
 .color >h5 {
-    font-size: 8.5px;
+    font-size: 12px;
     color: rgb(37, 37, 37);
     margin: 0px;
 }
@@ -139,27 +139,27 @@
     font-weight: lighter;
 }
 .color-shirt {
-    width: 40%;
-    height: 45px;
+    width: 50%;
+    height: 65px;
     /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .color-shirt >img {
-    width: 32.5%;
-    height: 35px;
+    width: 32%;
+    height: 45px;
     border-radius: 8px;
 }
 .size {
     width: 90%;
-    height: 90px;
+    height: 110px;
     border-bottom: 1px solid rgb(218, 218, 218);
     margin: 5px;
 }
 .size-text {
     width: 100%;
-    height: 20px;
+    height: 30px;
     /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
@@ -167,16 +167,16 @@
 }
 .size-text >h5 {
     color: rgb(23, 23, 23);
-    font-size: 8.5px;
+    font-size: 10px;
 }
 .size-text >p {
-    font-size: 8px;
+    font-size: 10px;
     color: rgb(218,28,92);
     font-weight: bold;
 }
 .size-select {
-    width: 50%;
-    height: 30px;
+    width: 60%;
+    height: 40px;
     /* border: 1px solid yellow; */
     display: flex;
     justify-content: space-between;
@@ -184,7 +184,7 @@
 }
 .size-select >button {
     width: 18%;
-    height: 20px;
+    height: 30px;
     font-size: 9px;
     border-radius: 5px;
     outline: none;
@@ -194,26 +194,27 @@
 }
 .size >p {
     width: 60%;
-    font-size: 8px;
+    font-size: 9px;
     color: rgb(68, 68, 68);
 }
 .card {
     width: 90%;
-    height: 200px;
-    border: 1px solid red;
-    margin: 5px;
+    height: 230px;
+    /* border: 1px solid red; */
+    margin: 15px 5px;
 }
 .card >h5 {
-    font-size: 9px;
-    margin: 0px;
+    font-size: 12px;
+    margin: 5px 5px;
 }
 .card >p {
-    font-size: 9px;
+    font-size: 11px;
 }
 .card-all {
     width: 100%;
     height: 50px;
-    border: 1px solid yellow;
+    margin-top: 5px;
+    /* border: 1px solid yellow; */
     display: flex;
 }
 .card-img >img {
@@ -221,12 +222,39 @@
     margin: 5px;
 }
 .card-info >h6 {
-    font-size: 7.5px;
-    color: rgb(36, 36, 36);
+    font-size: 9px;
+    color: rgb(27, 26, 26);
     margin: 0px;
     margin-top: 8px;
 }
 .card-info >p {
     font-size: 9px;
-    color: black;
+    color: rgb(54, 54, 54);
+}
+.Button {
+    width: 60%;
+    height: 50px;
+    /* border: 1px solid red; */
+    margin: 10px 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.Button >button:nth-child(1) {
+    width: 48%;
+    height: 40px;
+    border: 1px solid rgb(218,28,92);
+    border-radius: 5px;
+    background-color: white;
+    color: rgb(218,28,92);
+    font-weight: bold;
+}
+.Button >button:nth-child(2) {
+    width: 48%;
+    height: 40px;
+    border: 1px solid rgb(218,28,92);
+    border-radius: 5px;
+    background-color: rgb(218,28,92);
+    color: white;
+    font-weight: bold;
 }
