--- a/tata-cliq/src/components/Login.css
+++ b/tata-cliq/src/components/Login.css
@@ -3,9 +3,9 @@
     border: 2px solid rgb(98, 0, 255);
     height: 700px;
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
     /* opacity: 0.25; */
-    margin-top: 37.2%;
+    /* margin-top: 37.2%; */
     color: #000000;
     background-color: rgba(14, 13, 13, 0.25);
    
