--- a/tata-cliq/src/components/MensMulti.css
+++ b/tata-cliq/src/components/MensMulti.css
@@ -173,7 +173,7 @@
 .main-right {
     width: 72%;
     height: 1450px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -181,7 +181,7 @@
 .pro {
     width: 100%;
     height: 1450px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
