--- a/tata-cliq/src/components/Register.css
+++ b/tata-cliq/src/components/Register.css
@@ -3,9 +3,7 @@
     border: 2px solid rgb(98, 0, 255);
    height: 700px;
    width: 100%;
-   position: absolute;
-   /* opacity: 0.25; */
-   margin-top: 37.2%;
+   /* margin-top: 37.2%; */
    color: #000000;
    background-color: rgba(14, 13, 13, 0.25);
 }
@@ -15,7 +13,7 @@
    background-color: white;
    border: 1px solid white;
    margin: auto;
-   margin-top: 4%;
+   margin-top: 20px;
    text-align: center;
    border-radius: 20px;
    padding-bottom: 3%;
